--- a/exercicios/desafios/desafio012/estilo/style.css
+++ b/exercicios/desafios/desafio012/estilo/style.css
@@ -63,6 +63,9 @@ section {
     font-size: 6vh;
 
 }
+section > p {
+    padding-bottom: 2em;
+}
 
 section.normal {
     background-color: white;
@@ -70,8 +73,10 @@ section.normal {
 }
 
 section.imagem {
-    background-color: rgba(12, 11, 11, 0.866);
+    background-color: rgba(9, 9, 9, 0.866);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.677);
+    background-attachment: fixed;
 
 }
 
@@ -79,7 +84,22 @@ section.imagem > p {
 
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.588);
+    text-shadow: 1px 1px 0px black;
+    
+}
+section#img01 {
+
+    background-image: url("../imagens/background001.jpg");
+    background-position: right center;
+    background-size: cover;
+
+}
+section#img02 {
+
+    background-image: url("../imagens/background002.jpg");
+    background-size: cover;
+
 }
 footer {
     background-color: black;
